[gd_scene load_steps=4 format=3 uid="uid://dcpsgg1branhi"]

[ext_resource type="Script" path="res://scripts/life_counter.gd" id="1_2dqpl"]
[ext_resource type="Texture2D" uid="uid://y5j505rsiqsq" path="res://assets/kenney_platformerpack/PNG/HUD/hudHeart_full.png" id="1_pec2j"]
[ext_resource type="Script" path="res://scripts/link_button.gd" id="3_hpe7i"]

[node name="MarginContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
script = ExtResource("1_2dqpl")

[node name="Heart1" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("1_pec2j")
expand_mode = 1

[node name="Heart2" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("1_pec2j")
expand_mode = 1

[node name="Heart3" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("1_pec2j")
expand_mode = 1

[node name="LinkButton" type="LinkButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
text = "Exit to Main Menu"
script = ExtResource("3_hpe7i")

[connection signal="pressed" from="HBoxContainer/LinkButton" to="HBoxContainer/LinkButton" method="_on_pressed"]
